fix: disable form zoom on iOS using font size

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,12 @@
 html.turbolinks-progress-bar::before {
   display: none !important;
 }
+
+// Disable form zoom on iOS
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  select:focus,
+  textarea:focus,
+  input:focus {
+    font-size: 16px;
+  }
+}
